Move inner class Tile to its own java file